--- a/src/Views/RepositoryToolbar.axaml
+++ b/src/Views/RepositoryToolbar.axaml
@@ -80,7 +80,7 @@
           <ContentControl.Content>
             <Binding Path="CurrentBranch">
               <Binding.TargetNullValue>
-                <TextBlock Classes="monospace" Text="--"/>
+                <TextBlock Classes="primary" Text="--"/>
               </Binding.TargetNullValue>
             </Binding>
           </ContentControl.Content>
@@ -88,7 +88,7 @@
           <ContentControl.DataTemplates>
             <DataTemplate DataType="m:Branch">
               <Border Background="Transparent" ToolTip.Tip="{Binding FriendlyName}">
-                <TextBlock Classes="monospace" Text="{Binding FriendlyName}" MaxWidth="250" TextTrimming="CharacterEllipsis"/>
+                <TextBlock Classes="primary" Text="{Binding FriendlyName}" MaxWidth="250" TextTrimming="CharacterEllipsis"/>
               </Border>
             </DataTemplate>
           </ContentControl.DataTemplates>
