--- a/src/Views/CommitBaseInfo.axaml
+++ b/src/Views/CommitBaseInfo.axaml
@@ -54,7 +54,7 @@
         <Grid RowDefinitions="24,Auto,Auto,Auto" ColumnDefinitions="96,*">
           <!-- SHA -->
           <TextBlock Grid.Row="0" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.SHA}" />
-          <SelectableTextBlock Grid.Row="0" Grid.Column="1" Classes="monospace" Text="{Binding SHA}" Margin="12,0,0,0" VerticalAlignment="Center"/>
+          <SelectableTextBlock Grid.Row="0" Grid.Column="1" Classes="primary" Text="{Binding SHA}" Margin="12,0,0,0" VerticalAlignment="Center"/>
 
           <!-- PARENTS -->
           <TextBlock Grid.Row="1" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Parents}" IsVisible="{Binding Parents.Count, Converter={x:Static c:IntConverters.IsGreaterThanZero}}"/>
@@ -67,7 +67,7 @@
 
             <ItemsControl.ItemTemplate>
               <DataTemplate>
-                <TextBlock Classes="monospace"
+                <TextBlock Classes="primary"
                            Text="{Binding Converter={x:Static c:StringConverters.ToShortSHA}}"
                            Foreground="DarkOrange"
                            TextDecorations="Underline"
@@ -92,7 +92,7 @@
           
           <!-- Messages -->
           <TextBlock Grid.Row="3" Grid.Column="0" Classes="info_label" Text="{DynamicResource Text.CommitDetail.Info.Message}" VerticalAlignment="Top" Margin="0,4,0,0" />
-          <SelectableTextBlock Grid.Row="3" Grid.Column="1" Margin="12,5,8,0" Classes="monospace" Text="{Binding #ThisControl.Message}" TextWrapping="Wrap"/>
+          <SelectableTextBlock Grid.Row="3" Grid.Column="1" Margin="12,5,8,0" Classes="primary" Text="{Binding #ThisControl.Message}" TextWrapping="Wrap"/>
         </Grid>
       </StackPanel>
     </DataTemplate>
