--- a/src/Views/LauncherTabBar.axaml
+++ b/src/Views/LauncherTabBar.axaml
@@ -56,7 +56,7 @@
                         IsVisible="{Binding !Node.IsRepository}"
                         IsHitTestVisible="False"/>
                   <TextBlock Grid.Column="1"
-                             Classes="monospace"
+                             Classes="primary"
                              FontSize="12"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
                              TextAlignment="Center"
@@ -64,7 +64,7 @@
                              IsVisible="{Binding Node.IsRepository}"
                              IsHitTestVisible="False"/>
                   <TextBlock Grid.Column="1"
-                             Classes="monospace"
+                             Classes="primary"
                              FontSize="12"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
                              TextAlignment="Center"
