feature: double click on commit (#295)
* when commit is current branch head, do nothing
* when commit is head of some local branch which is not current, try to checkout this branch
* otherwise, ask user should checkout selected commit as deteched

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -29,7 +29,8 @@
                 VerticalScrollBarVisibility="Auto"
                 LayoutUpdated="OnCommitDataGridLayoutUpdated"
                 SelectionChanged="OnCommitDataGridSelectionChanged"
-                ContextRequested="OnCommitDataGridContextRequested">
+                ContextRequested="OnCommitDataGridContextRequested"
+                DoubleTapped="OnCommitDataGridDoubleTapped">
         <DataGrid.Styles>
           <Style Selector="DataGridColumnHeader">
             <Setter Property="MinHeight" Value="24"/>
