--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -453,40 +453,92 @@
       </Grid>
 
       <!-- Commit Search Panel -->
-      <Grid Grid.Row="1" RowDefinitions="Auto,32,*" Margin="8,0,4,8" IsVisible="{Binding IsSearching}" PropertyChanged="OnSearchCommitPanelPropertyChanged">
+      <Grid Grid.Row="1" RowDefinitions="24,32,*" Margin="8,0,4,8" IsVisible="{Binding IsSearching}" PropertyChanged="OnSearchCommitPanelPropertyChanged">
         <!-- Search Input Box -->
-        <TextBox Grid.Row="0"
-                 x:Name="TxtSearchCommitsBox"
-                 Height="24"
-                 BorderThickness="1"
-                 BorderBrush="{DynamicResource Brush.Border2}"
-                 Background="{DynamicResource Brush.Contents}"
-                 CornerRadius="4"
-                 Watermark="{DynamicResource Text.Repository.Search}"
-                 Text="{Binding SearchCommitFilter, Mode=TwoWay}"
-                 VerticalContentAlignment="Center"
-                 KeyDown="OnSearchKeyDown">
-          <TextBox.InnerLeftContent>
-            <Path Width="14" Height="14"
-                  Margin="6,0,0,0"
-                  Fill="{DynamicResource Brush.FG2}"
-                  Data="{StaticResource Icons.Search}"/>
-          </TextBox.InnerLeftContent>
-
-          <TextBox.InnerRightContent>
-            <Button Classes="icon_button"
-                    Width="16"
-                    Margin="0,0,6,0"
-                    Command="{Binding ClearSearchCommitFilter}"
-                    IsVisible="{Binding SearchCommitFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
-                    HorizontalAlignment="Right">
+        <Grid Grid.Row="0">
+          <TextBox x:Name="TxtSearchCommitsBox"
+                   Height="24"
+                   BorderThickness="1"
+                   BorderBrush="{DynamicResource Brush.Border2}"
+                   Background="{DynamicResource Brush.Contents}"
+                   CornerRadius="4"
+                   Watermark="{DynamicResource Text.Repository.Search}"
+                   Text="{Binding SearchCommitFilter, Mode=TwoWay}"
+                   VerticalContentAlignment="Center"
+                   KeyDown="OnSearchKeyDown">
+            <TextBox.InnerLeftContent>
               <Path Width="14" Height="14"
-                    Margin="0,1,0,0"
-                    Fill="{DynamicResource Brush.FG1}"
-                    Data="{StaticResource Icons.Clear}"/>
-            </Button>
-          </TextBox.InnerRightContent>
-        </TextBox>
+                    Margin="6,0,0,0"
+                    Fill="{DynamicResource Brush.FG2}"
+                    Data="{StaticResource Icons.Search}"/>
+            </TextBox.InnerLeftContent>
+
+            <TextBox.InnerRightContent>
+              <Button Classes="icon_button"
+                      Width="16"
+                      Margin="0,0,6,0"
+                      Command="{Binding ClearSearchCommitFilter}"
+                      IsVisible="{Binding SearchCommitFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                      HorizontalAlignment="Right">
+                <Path Width="14" Height="14"
+                      Margin="0,1,0,0"
+                      Fill="{DynamicResource Brush.FG1}"
+                      Data="{StaticResource Icons.Clear}"/>
+              </Button>
+            </TextBox.InnerRightContent>
+          </TextBox>
+
+          <Popup PlacementTarget="#TxtSearchCommitsBox"
+                 Placement="BottomEdgeAlignedLeft"
+                 HorizontalOffset="-8" VerticalAlignment="-8"
+                 IsOpen="{Binding IsSearchCommitSuggestionOpen}">
+            <Border Margin="8" VerticalAlignment="Top" Effect="drop-shadow(0 0 8 #80000000)">
+              <Border Background="{DynamicResource Brush.Popup}" CornerRadius="4" Padding="4" BorderThickness="0.65" BorderBrush="{DynamicResource Brush.Accent}">
+                <ListBox x:Name="SearchSuggestionBox"
+                         Background="Transparent"
+                         SelectionMode="Single"
+                         ItemsSource="{Binding SearchCommitFilterSuggestion}"
+                         MaxHeight="400"
+                         Focusable="True"
+                         KeyDown="OnSearchSuggestionBoxKeyDown">
+                  <ListBox.Styles>
+                    <Style Selector="ListBoxItem">
+                      <Setter Property="Padding" Value="0"/>
+                      <Setter Property="MinHeight" Value="26"/>
+                      <Setter Property="CornerRadius" Value="4"/>
+                    </Style>
+
+                    <Style Selector="ListBox">
+                      <Setter Property="FocusAdorner">
+                        <FocusAdornerTemplate>
+                          <Grid/>
+                        </FocusAdornerTemplate>
+                      </Setter>
+                    </Style>
+                  </ListBox.Styles>
+
+                  <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                      <StackPanel Orientation="Vertical"/>
+                    </ItemsPanelTemplate>
+                  </ListBox.ItemsPanel>
+
+                  <ListBox.ItemTemplate>
+                    <DataTemplate DataType="x:String">
+                      <StackPanel Background="Transparent" Orientation="Vertical" Margin="8,4" DoubleTapped="OnSearchSuggestionDoubleTapped">
+                        <StackPanel Orientation="Horizontal">
+                          <Path Width="12" Height="12" Data="{StaticResource Icons.File}"/>
+                          <TextBlock Classes="primary" Margin="6,0,0,0" Text="{Binding Converter={x:Static c:PathConverters.PureFileName}}"/>
+                        </StackPanel>
+                        <TextBlock Classes="primary" FontSize="12" Margin="18,2,0,0" Foreground="{DynamicResource Brush.FG2}" Text="{Binding Converter={x:Static c:PathConverters.PureDirectoryName}}"/>
+                      </StackPanel>
+                    </DataTemplate>
+                  </ListBox.ItemTemplate>
+                </ListBox>
+              </Border>
+            </Border>
+          </Popup>
+        </Grid>
 
         <Grid Grid.Row="1" ColumnDefinitions="Auto,*">
           <TextBlock Grid.Column="0"
