--- a/src/Views/WelcomeToolbar.axaml
+++ b/src/Views/WelcomeToolbar.axaml
@@ -9,7 +9,7 @@
   <Grid ColumnDefinitions="Auto,*,Auto" Margin="4,0">
     <StackPanel Grid.Column="0" Orientation="Horizontal">
       <Button Classes="icon_button" Width="32" Command="{Binding Clone}" ToolTip.Tip="{DynamicResource Text.Welcome.Clone}">
-        <Path Width="13" Height="13" Data="{StaticResource Icons.Pull}"/>
+        <Path Width="16" Height="16" Data="{StaticResource Icons.Clone}" Margin="0,4,0,0"/>
       </Button>
 
       <Button Classes="icon_button" Width="32" Click="OpenLocalRepository" ToolTip.Tip="{DynamicResource Text.Welcome.OpenOrInit}">
